Temp updated menu content height to stop overflow

--- a/www/style.css
+++ b/www/style.css
@@ -378,7 +378,7 @@ div.logoTopBar>span.usernameGreeting {
 }
 
 div.menuContent {
-    height: 100%;
+    height: 95%;
     width: auto;
     margin-right: 210px;
 }
